# template

./: .env.example  .gitignore  Cargo.toml  README.md  rustfmt.toml
.sqlx/: query-adfdbef539581f57a598e9427db551fd2018c2feb54436f22d88ae949272fca4.json  query-e02e2977d792259261278bb70d5221ca70580633d471ce016d45fedfe1ccbf01.json
migrations/: 20231023120114_cards.down.sql  20231023120114_cards.up.sql
migrations/2023-10-23-085857_users/: up.sql
src/: lib.rs  main.rs
tests/: home_page_test.rs
