[package]
name = "template-rust-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# logging
slog = "2.7.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# async runtime
tokio = { version = "1.28", features = ["full"] }
tokio-util = "0.7.8" # for cancellation tokens and graceful shutdown
# internet is byte streams
hyper = { version = "1.0.0-rc.3", features = ["full"] }
# some bytes are hypertext
axum = { version = "0.6.20", features = ["headers", "form", "ws"] }
axum-extra = { version = "0.7.4", features = ["cookie", "form"] }

# for static files serving, TODO(hqhs): investigate
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }

# templating
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"

tera = "1.19.1"
anyhow = "1.0.75"
dotenvy = "0.15.7"

[dependencies.diesel]
version = "2.1.3"
features = ["sqlite"]
