[package]
name = "template"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "service"
path = "bin/service.rs"

[dependencies]
# logging
slog = "2.7.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# async runtime
tokio = { version = "1.28", features = ["full"] }
tokio-util = "0.7.8" # for cancellation tokens and graceful shutdown
# internet is byte streams
hyper = { version = "1.0.0-rc.3", features = ["full"] }
# some bytes are hypertext
axum = { version = "0.6.20", features = ["headers", "form", "ws"] }
axum-extra = { version = "0.7.4", features = ["cookie", "form"] }

# for static files serving, TODO(hqhs): investigate
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }

# templating
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"

tera = "1.19.1"
anyhow = "1.0.75"
dotenvy = "0.15.7"

sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "sqlite", "migrate" ] }

getrandom = { version = "0.2.10", features = ["js"]}

[profile.release]
lto = true
strip = true
codegen-units = 1

[dev-dependencies]
axum-test = "13.1.1"
